--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,18 @@ html {
   font: normal 16px sans-serif;
   color: #555; }
 
-nav {
+ul, nav {
   list-style: none; }
 
 a {
   text-decoration: none;
-  opacity: 0.75; }
+  opacity: 0.75;
+  color: #fff;
+  cursor: pointer; }
 
 a:hover {
-  opacity: 1; }
+  opacity: 1;
+  cursor: pointer; }
 
 /*BUTTON STYLING*/
 .btn {
@@ -32,12 +35,39 @@ section {
   align-items: center;
   padding: 100px 80px; }
 
+section h3.title {
+  text-transform: capitalize;
+  font: bold 32px "Open Sans", sans-serif;
+  margin-bottom: 30px;
+  text-align: center; }
+
+section p {
+  max-width: 775px;
+  line-height: 2;
+  padding: 0 20px;
+  margin-bottom: 30px;
+  text-align: center; }
+
+.grid {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; }
+
+hr {
+  width: 250px;
+  height: 3px;
+  background-color: #3f51b5;
+  margin: 50px;
+  border: 0; }
+
 /*HERO STYLING*/
 .hero {
   position: relative;
   justify-content: center;
   text-align: center;
-  min-height: 100vh; }
+  min-height: 100vh;
+  color: #fff; }
 
 .hero .background-image {
   position: absolute;
@@ -46,16 +76,41 @@ section {
   width: 100%;
   height: 100%;
   background-size: cover;
-  z-index: -1; }
+  z-index: -1;
+  background-color: #80a3db; }
+
+.hero h1 {
+  font: bold 60px "Open Sans", sans-serif;
+  margin-bottom: 15px; }
+
+.hero h3 {
+  font: normal 28px "Open Sans", sans-serif;
+  margin-bottom: 40px; }
+
+.hero a.btn {
+  padding: 20px; }
+
+.hero-content-area {
+  opacity: 0;
+  margin-top: 100px;
+  animation: 1s slidefade 1s forwards; }
+
+@keyframes slidefade {
+  100% {
+    opacity: 1;
+    margin-top: 0px; } }
 
 /* HEADER STYLING */
 header {
+  position: absolute;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-content: center;
   padding: 35px 100px 0;
   opacity: 0;
-  animation: 1s fadein 0.5s forwards; }
+  animation: 1s fadein 0.5s forwards;
+  color: #fff; }
 
 @keyframes fadein {
   100% {
@@ -69,4 +124,19 @@ header nav {
   margin-right: -15px; }
 
 header nav li {
-  margin: 0 15px; }
+  margin: 0 15px;
+  cursor: pointer; }
+
+/* Destinations section */
+.destinations .grid li {
+  height: 350px;
+  padding: 20px;
+  background-clip: content-box;
+  background-size: cover;
+  background-position: center; }
+
+.destinations .grid li.small {
+  flex-basis: 30%; }
+
+.destinations .grid li.large {
+  flex-basis: 70%; }
