--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,10 @@ section p {
   margin-bottom: 30px;
   text-align: center; }
 
+@media only screen and (max-width: 800px) {
+  section {
+    padding: 50px 20px; } }
+
 .grid {
   width: 100%;
   display: flex;
@@ -71,6 +75,16 @@ hr {
   text-align: center;
   min-height: 100vh;
   color: #fff; }
+
+@media only screen and (max-width: 800px) {
+  .hero {
+    min-height: 600px; }
+  .hero h1 {
+    font-size: 48px; }
+  .hero h3 {
+    font-size: 24px; }
+  .hero a.btn {
+    padding: 15px 40px; } }
 
 .hero .background-image {
   position: absolute;
@@ -115,6 +129,15 @@ header {
   animation: 1s fadein 0.5s forwards;
   color: #fff; }
 
+@media only screen and (max-width: 800px) {
+  header {
+    padding: 20px 50px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+  header h2 {
+    margin-bottom: 15px; } }
+
 @keyframes fadein {
   100% {
     opacity: 1; } }
@@ -144,6 +167,16 @@ header nav li {
 .destinations .grid li.large {
   flex-basis: 70%; }
 
+@media only screen and (max-width: 1100px) {
+  .destinations .grid li.large,
+  .destinations .grid li.small {
+    flex-basis: 50%; } }
+
+@media only screen and (max-width: 800px) {
+  .destinations .grid li.large,
+  .destinations .grid li.small {
+    flex-basis: 100%; } }
+
 .packages .grid li {
   padding: 50px;
   flex-basis: 50%;
@@ -156,11 +189,28 @@ header nav li {
   font-size: 30px;
   margin: 25px 0; }
 
+@media (max-width: 800px) {
+  .packages .grid li {
+    flex-basis: 100%;
+    padding: 10px; } }
+
+@media only screen and (max-width: 800px) {
+  .testimonials .quote {
+    font-size: 18px;
+    margin: 15px 0; }
+  .testimonials .author {
+    font-size: 14px; } }
+
 .testimonials .quote {
   font-size: 22px;
   font-weight: 300;
   line-height: 1.5;
   margin: 25px 0 40px; }
+
+@media only screen and (max-width: 1000px) {
+  .contact form input {
+    flex-basis: 100%;
+    margin: 0 0 20px 0; } }
 
 .contact form {
   display: flex;
@@ -198,3 +248,12 @@ footer p {
   font-size: 14px;
   opacity: 0.6;
   align-self: center; }
+
+@media only screen and (max-width: 1000px) {
+  footer {
+    flex-direction: column; }
+  footer p {
+    text-align: center;
+    margin-bottom: 15px; }
+  footer ul li {
+    margin: 0 8px; } }
