--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -63,6 +63,12 @@ section p{
 
 }
 
+@media only screen and (max-width: 800px){
+    section {
+        padding: 50px 20px;
+    }
+}
+
 .grid{
     width: 100%;
     display: flex;
@@ -86,6 +92,22 @@ hr{
     text-align: center;
     min-height: 100vh;
     color: #fff;
+}
+
+@media only screen and (max-width: 800px){
+    .hero{
+        min-height: 600px;
+    }
+    .hero h1{
+        font-size: 48px;
+    }
+    .hero h3{
+        font-size: 24px;
+    }
+
+    .hero a.btn{
+        padding: 15px 40px;
+    }
 }
 
 .hero .background-image{
@@ -142,6 +164,18 @@ header{
     color: #fff;
 }
 
+@media only screen and (max-width: 800px){
+    header{
+        padding: 20px 50px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    header h2{
+        margin-bottom: 15px;
+    }
+}
+
 @keyframes fadein{
     100%{
         opacity: 1;
@@ -181,7 +215,22 @@ header nav li{
     flex-basis: 70%;
 }
 
+@media only screen and (max-width: 1100px){
+    .destinations .grid li.large,
+    .destinations .grid li.small{
+        flex-basis: 50%;
+    }
+}
+
+@media only screen and (max-width: 800px){
+    .destinations .grid li.large,
+    .destinations .grid li.small{
+        flex-basis: 100%;
+    }
+}
 // Packages Section
+
+
 
 .packages .grid li{
     padding: 50px;
@@ -198,7 +247,24 @@ header nav li{
     margin: 25px 0;
 }
 
+@media (max-width: 800px){
+    .packages .grid li{
+        flex-basis: 100%;
+        padding: 10px;
+    }
+}
+
 // Testimonials section
+
+@media only screen and (max-width: 800px){
+    .testimonials .quote{
+        font-size: 18px;
+        margin: 15px 0;
+    }
+    .testimonials .author{
+        font-size: 14px;
+    }
+}
 
 .testimonials .quote{
     font-size: 22px;
@@ -208,6 +274,13 @@ header nav li{
 }
 
 // Contact section
+
+@media only screen and (max-width: 1000px){
+    .contact form input{
+        flex-basis: 100%;
+        margin: 0 0 20px 0;
+    }
+}
 
 .contact form{
     display: flex;
@@ -253,4 +326,19 @@ footer p{
     font-size: 14px;
     opacity: 0.6;
     align-self: center;
+}
+
+@media only screen and (max-width: 1000px){
+    footer{
+        flex-direction: column;
+    }
+
+    footer p{
+        text-align: center;
+        margin-bottom: 15px;
+    }
+
+    footer ul li{
+        margin: 0 8px;
+    }
 }
